Got the websocket communication down and upstream working. Also generated required pandas dfs, but need to create new mL model because safari does not allow magnetormeter generic sensor api

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django = "*"
 uvicorn = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+pandas = "*"
+starlette = "*"
 
 [requires]
 python_version = "3.7"
