--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -12,6 +12,7 @@
     "motion-sensors-polyfill": "^0.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "serve": "^11.3.2"
