--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "*"
 django-cors-headers = "*"
 pandas = "*"
 starlette = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
