Big Changes: Create a new ML model and fully intergrated this in the project to make actual prediction, also added the jupytoer notebook and all those files. Furthermore added exception for the websocket production and development. Added a Readme and some other design changes

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ django-cors-headers = "*"
 pandas = "*"
 starlette = "*"
 whitenoise = "*"
+joblib = "*"
+xgboost = "*"
+sklearn = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
