--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,44 @@
--i https://pypi.org/simple
-asgiref==3.2.10; python_version >= '3.5'
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+asgiref==3.2.10
+attrs==19.3.0
+autobahn==20.7.1
+Automat==20.2.0
+cffi==1.14.1
+click==7.1.2
+constantly==15.1.0
+cryptography==3.0
+daphne==2.5.0
+Django==3.1
 django-cors-headers==3.4.0
-django==3.1
+django-sslserver==0.22
 djangorestframework==3.11.1
 h11==0.9.0
-httptools==0.1.1; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
-numpy==1.19.1; python_version >= '3.6'
+httptools==0.1.1
+hyperlink==19.0.0
+idna==2.10
+incremental==17.5.0
+joblib==0.16.0
+numpy==1.19.1
 pandas==1.1.0
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+pyOpenSSL==19.1.0
+python-dateutil==2.8.1
 pytz==2020.1
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.3.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+scikit-learn==0.23.2
+scipy==1.5.2
+service-identity==18.1.0
+six==1.15.0
+sklearn==0.0
+sqlparse==0.3.1
 starlette==0.13.7
+threadpoolctl==2.1.0
+Twisted==20.3.0
+txaio==20.4.1
 uvicorn==0.11.8
-uvloop==0.14.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
-websockets==8.1; python_full_version >= '3.6.1'
+uvloop==0.14.0
+websockets==8.1
+whitenoise==5.2.0
+xgboost==1.1.1
+zope.interface==5.1.0
